# jira_2_bdd_agentic_workflow

./: .gitignore  README.md  debug_console_errors.md  test_backend_connection.html  test_integration.md
angular/: .gitignore  PROJECT_STRUCTURE.txt  README.md  angular.json  setup.sh
angular/src/: main.ts  styles.scss
angular/src/app/: app.component.ts
angular/src/app/components/feature-generation-job/: feature-generation-job.component.ts
angular/src/app/components/header/: header.component.ts
angular/src/app/components/study-controls/: study-controls.component.ts
angular/src/app/components/study-header/: study-header.component.ts
angular/src/app/components/study-table/: study-table.component.ts
angular/src/app/components/validation-panel/: validation-panel.component.ts
angular/src/app/service/: backend-service.ts  job-refresh.service.ts
angular/src/app/services/: workflow.service.ts
angular/src/assets/: .gitkeep
backend/: .env.example  .gitignore  README.md  dashboard.html  main.py  requirements.txt
backend/src/agents/: bdd_generator_agent.py  orchestrator.py
backend/src/config/: logging.py  settings.py
backend/src/tools/: application_tools.py  github_tools.py  jira_tools.py  rag_tools.py
frontend/: .gitignore  PROJECT_STRUCTURE.txt  package-lock.json  package.json  setup.bat
frontend/.angular/cache/17.3.17/angular-webpack/862b349f32430edd342b43606826818658a57ee9/: 1.pack  index.pack  index.pack.old
frontend/src/: index.html  main.ts
frontend/src/app/components/job-status-panel/: job-status-panel.component.ts
lib-model/models--microsoft--codebert-base/refs/: main
lib-model/models--microsoft--codebert-base/refs/refs/pr/: 9
test-automation/: GETTING_STARTED.md  README.md  conftest.py  pyproject.toml  requirements.txt  test_model_check.py
test-automation/config/: __init__.py  backend_test_config.py
test-automation/docs/: backend_integration_guide.md
test-automation/src/: huggingface_research.py  model_manager.py
test-automation/src/backend_integration/: __init__.py  agent_testing.py  fastapi_client.py
test-automation/src/benchmarking/: benchmark_framework.py
test-automation/src/config/: __init__.py  logging.py
test-automation/src/utils/: test_helpers.py
test-automation/src/validation/: accuracy_optimization.py
test-automation/tests/backend/: __init__.py  test_functional_integration.py
test-automation/tests/bdd_validation/: __init__.py  test_bdd_validation.py
test-automation/tests/integration/: test_streamlined_model_integration.py  test_workflow_orchestration.py
test-automation/tests/validation/: test_bdd_validation_core.py
